example/guestbook/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  annotations:
   kubernetes.io/ingress.class: citrix
   ingress.citrix.com/frontend-ip: 192.168.33.15
spec:
  rules:
  - host: www.guestbook3.com
    http:
      paths:
      - backend:
          service:
            name: http-service
            port:
              number: 8080
        path: /
        pathType: Prefix
